# Procon26

./: .gitignore  Answer.txt  CMakeLists.txt  Makefile  README.md  StructureTest  main.cpp  test
Hal/: Answer.txt  CMakeCache.txt  CMakeLists.txt  Characteristics.cpp  Characteristics.h  Procon26-Hal  SD.h  Structures.h  cmake_install.cmake  main.cpp  makefile  outform.html  output.txt  test.txt
Hal/Heuristics/: CMakeLists.txt  Cavity.cpp  Cavity.h  Density.cpp  Density.h  DensityAround.cpp  DensityAround.h  Dent.cpp  Dent.h  Frame.cpp  Frame.h  MinArea.cpp  MinArea.h  Near.cpp  Near.h  Random.cpp  Random.h  SD.cpp  SD.h  Score.cpp  Score.h  WeightComposit.cpp  WeightComposit.h
Hal/Http/: SendAnswer.cpp  SendAnswer.h
Hal/NetWork/: CMakeLists.txt  ProblemIO.cpp  ProblemIO.h
Hal/Perfect/: BlockSize.cpp  BlockSize.h  CMakeLists.txt  CavityBlocks.cpp  CavityBlocks.h  Composit.cpp  Composit.h  DPBlockSize.cpp  DPBlockSize.h  DeadSpace.cpp  DeadSpace.h  MinTriming.cpp  MinTriming.h  PPPP.cpp  PPPP.h  ParityCheck.cpp  ParityCheck.h  PerfectComposit.cpp  PerfectComposit.h
Hal/Procon26-Hal.dSYM/Contents/: Info.plist
Hal/Procon26-Hal.dSYM/Contents/Resources/DWARF/: Procon26-Hal
Hal/Solver/: AStar.cpp  AStar.h  BestBackTrack.cpp  BestBackTrack.h  BestBeam.cpp  BestBeam.h  BestFirst.cpp  BestFirst.h  CMakeLists.txt  DLS.cpp  DLS.h  DoubleLimit.cpp  DoubleLimit.h  IDDFS.cpp  IDDFS.h  IterativeCover.cpp  IterativeCover.h  PerfectBackTrack.cpp  PerfectBackTrack.h  QuickBeam.cpp  QuickBeam.h
Problem/: 1.txt  14.txt  15.txt  16.txt  17.txt  18.txt  27.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  42.txt  45.txt  49.txt  Problem.txt  quest1.txt  quest10.txt  quest12.txt  quest13.txt  quest14.txt  quest15.txt  quest16.txt  quest17.txt  quest2.txt  quest20.txt  quest21.txt  quest3.txt  quest4.txt  quest5.txt  quest6.txt  quest7.txt  quest9.txt
Riya/: AnswerHistory.h  BeemSearch.cpp  BeemSearch.h  CMakeLists.txt  Config.h  Contain.cpp  Contain.h  Contain.hpp  GABase.cpp  GABase.h  GASolver.cpp  GASolver.h  Parameters.h  PerfectContain.hpp  Structure.h  blockUtility.cpp  blockUtility.h  block_heuristics_solver.cpp  block_heuristics_solver.h  block_sa_solver.cpp  block_sa_solver.h  main.cpp  modules.h  petternMatching.h  reference_list.h  tsp.cpp  tsp.h  tsp_ga.cpp  tsp_ga.h  tsp_sa.cpp  tsp_sa.h
Structure/: .Matrix.hpp.swp  :  ;  Answer.cpp  Answer.h  Answer.txt  Array.hpp  Block.cpp  Block.h  CMakeCache.txt  CMakeLists.txt  Field.cpp  Field.h  Hand.cpp  Hand.h  Heuristic.h  Layer.hpp  Makefile  Matrix.hpp  Multi.hpp  MultiBit.hpp  Perfect.h  Point.cpp  Point.h  Point.hpp  Problem.cpp  Problem.h  Solver.h  SutructureTest  Transform.cpp  Transform.h  block.txt  cmake_install.cmake  makefile  module.hpp  (+3 more)
(+42 files in other folders)
